styles.css
@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");

* {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
}

img {
  width: 90px;
  height: 50px;
}

ul {
  display: flex;
  list-style: none;
  margin: 0;
  padding: 0;
  gap: 16px;
  font-size: 18px;
  color: #e5e7eb;
}

.header {
  display: flex;
  justify-content: space-between;
  align-items: center;
  font-family: Roboto, sans-serif;
  background-color: #1f2937;
  padding: 100px 200px;
}

.section1 {
  display: flex;
  justify-content: center;
  gap: 40px;
  font-family: Roboto, sans-serif;
  background-color: #1f2937;
  color: #f9faf8;
  height: 300px;
  padding: 100px 200px;
}

.section1-left {
  display: flex;
  flex-direction: column;
}

h1 {
  font-weight: 900;
  size: 48px;
}

.cta1 {
  background-color: #2882f6;
  border: #2882f6;
  color: #e5e7eb;
  border-radius: 2px;
  height: 30px;
  width: 80px;
}

.section1-right {
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: gray;
  width: 600px;
}

.placeholder {
  display: flex;
  justify-content: center;
  align-items: center;
}

.section2 {
  display: flex;
  flex-direction: column;
  padding: 50px 200px 100px;
  align-items: center;
  gap: 20px;
  font-family: Roboto, sans-serif;
  text-align: center;
}

.section2-cards {
  display: flex;
  gap: 10px;
}

.card {
  width: 200px;
  text-align: center;
}

.card p {
  color: darkgray;
}

.section2-img {
  width: 100px;
  height: 100px;
}

.section3 {
  background-color: #e5e7eb;
  padding: 150px 200px;
}

.quote {
  display: flex;
  flex-direction: center;
  align-content: center;
  gap: 10px;
}

.quote h3 {
  color: #1f2937;
  font-style: italic;
  font-weight: lighter;
  font-size: 32px;
  font-family: Roboto, sans-serif;
}

.quote p {
  align-self: end;
  font-weight: bold;
  margin-right: 50px;
  margin-top: 200px;
  font-family: Roboto, sans-serif;
}

.section4 {
  padding: 100px 200px;
}

.cta2 {
  display: flex;
  justify-content: space-between;
  padding: 50px 100px;
  background-color: #3882f6;
  border-radius: 10px;
}

.cta-box h4 {
  color: #e5e7eb;
}

.cta-box p {
  color: #e5e7eb;
}

.invert {
  background-color: #3882f6;
  padding: 10px 30px;
  color: #e5e7eb;
  border: 2px solid #e5e7eb;
  border-radius: 10px;
}

.footer {
  display: flex;
  align-items: center;
  justify-content: center;
  font-family: Roboto, sans-serif;
  height: 50px;
  background-color: #1f2937;
  color: #e5e7eb;
}

